--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!doctype html>
 <html>
   <head>
-    <title>This is the title of the webpage!</title>
+    <title>Margaux Maxwell: Lede Project 1</title>
   </head>
   <body>
     <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+    <div class="html-content">
+<iframe title="How many renter occupied households in Yakima County are considered rent burdened?" aria-label="Stacked Bars" id="datawrapper-chart-nIoqe" src="https://datawrapper.dwcdn.net/nIoqe/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="264" data-external="1" name="datawrapper-chart-nIoqe"></iframe>
+<script type="text/javascript">
+!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
+</script>
+</div>
   </body>
 </html>
