--- a/index.html
+++ b/index.html
@@ -5,11 +5,261 @@
   </head>
   <body>
     <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
-    <div class="html-content">
-<iframe title="How many renter occupied households in Yakima County are considered rent burdened?" aria-label="Stacked Bars" id="datawrapper-chart-nIoqe" src="https://datawrapper.dwcdn.net/nIoqe/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="264" data-external="1" name="datawrapper-chart-nIoqe"></iframe>
-<script type="text/javascript">
-!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
+
+<div class="frame">
+<table id="unlawfuldetainers">
+<tr style="border-bottom: 1px solid black; font-size:1.2em;">
+<th colspan="99" style="text-align:left;">Evictions filed in Yakima County</th>
+</tr>
+<tr>
+<th class="year">Year</th>
+<th class="month">Jan</th>
+<th class="month">Feb</th>
+<th class="month">Mar</th>
+<th class="month">Apr</th>
+<th class="month">May</th>
+<th class="month">Jun</th>
+<th class="month">Jul</th>
+<th class="month">Aug</th>
+<th class="month">Sep</th>
+<th class="month">Oct</th>
+<th class="month">Nov</th>
+<th class="month">Dec</th>
+<th class="sum">Sum</th>
+<th class="oupr">OUPR*</th>
+<th class="avg">Avg</th>
+</tr>
+<tr style="display: none;">
+<td class="year">2016</td>
+<td class="month">44</td>
+<td class="month">39</td>
+<td class="month">52</td>
+<td class="month">37</td>
+<td class="month">63</td>
+<td class="month">43</td>
+<td class="month">63</td>
+<td class="month">56</td>
+<td class="month">56</td>
+<td class="month">54</td>
+<td class="month">42</td>
+<td class="month">34</td>
+<td class="sum">583</td>
+<td class="oupr">27,091</td>
+<td class="avg">2.15</td>
+</tr>
+<tr>
+<td class="year">2017</td>
+<td class="month">47</td>
+<td class="month">51</td>
+<td class="month">55</td>
+<td class="month">42</td>
+<td class="month">52</td>
+<td class="month">51</td>
+<td class="month">37</td>
+<td class="month">61</td>
+<td class="month">69</td>
+<td class="month">54</td>
+<td class="month">42</td>
+<td class="month">35</td>
+<td class="sum">596</td>
+<td class="oupr">27,578</td>
+<td class="avg">2.16</td>
+</tr>
+<tr>
+<td class="year">2018</td>
+<td class="month">45</td>
+<td class="month">39</td>
+<td class="month">40</td>
+<td class="month">50</td>
+<td class="month">49</td>
+<td class="month">46</td>
+<td class="month">53</td>
+<td class="month">49</td>
+<td class="month">54</td>
+<td class="month">57</td>
+<td class="month">38</td>
+<td class="month">31</td>
+<td class="sum">551</td>
+<td class="oupr">27,410</td>
+<td class="avg">2.01</td>
+</tr>
+<tr>
+<td class="year">2019</td>
+<td class="month">49</td>
+<td class="month">52</td>
+<td class="month">46</td>
+<td class="month">25</td>
+<td class="month">44</td>
+<td class="month">39</td>
+<td class="month">49</td>
+<td class="month">29</td>
+<td class="month">35</td>
+<td class="month">44</td>
+<td class="month">28</td>
+<td class="month">28</td>
+<td class="sum">468</td>
+<td class="oupr">28,647</td>
+<td class="avg">1.63</td>
+</tr>
+<tr>
+<td class="year">2020</td>
+<td class="month">35</td>
+<td class="month">28</td>
+<td class="month">20</td>
+<td class="month">4</td>
+<td class="month">0</td>
+<td class="month">4</td>
+<td class="month">9</td>
+<td class="month">10</td>
+<td class="month">12</td>
+<td class="month">7</td>
+<td class="month">11</td>
+<td class="month">12</td>
+<td class="sum">152</td>
+<td class="oupr">31,543</td>
+<td class="avg">0.48</td>
+</tr>
+<tr>
+<td class="year">2021</td>
+<td class="month">9</td>
+<td class="month">13</td>
+<td class="month">20</td>
+<td class="month">19</td>
+<td class="month">13</td>
+<td class="month">19</td>
+<td class="month">35</td>
+<td class="month">19</td>
+<td class="month">22</td>
+<td class="month">19</td>
+<td class="month">23</td>
+<td class="month">15</td>
+<td class="sum">226</td>
+<td class="oupr">32,195</td>
+<td class="avg">0.70</td>
+</tr>
+<tr>
+<td class="year">2022</td>
+<td class="month">19</td>
+<td class="month">29</td>
+<td class="month">38</td>
+<td class="month">21</td>
+<td class="month">28</td>
+<td class="month">28</td>
+<td class="month">29</td>
+<td class="month">23</td>
+<td class="month">30</td>
+<td class="month">19</td>
+<td class="month">28</td>
+<td class="month">23</td>
+<td class="sum">315</td>
+<td class="oupr">32,195</td>
+<td class="avg">0.98</td>
+</tr>
+<tr>
+<td class="year">2023</td>
+<td class="month">18</td>
+<td class="month">34</td>
+<td class="month">31</td>
+<td class="month">36</td>
+<td class="month"></td>
+<td class="month"></td>
+<td class="month"></td>
+<td class="month"></td>
+<td class="month"></td>
+<td class="month"></td>
+<td class="month"></td>
+<td class="month"></td>
+<td class="sum">119</td>
+<td class="oupr"></td>
+<td class="avg"></td>
+</tr>
+<tr style="border-top: 1px solid black; color: grey;">
+<td colspan="99" style="color: grey; text-align: left;">Chart: Yakima Herald-Republic • Source: Seattle Times and Yakima County (2023)</td>
+</tr>
+<tr style="border-top: 1px solid black; color: grey; display: none;">
+<td colspan="99" style="color: grey;">* OUPR: Occupied units paying rent</td>
+</tr>
+</table>
+</div>
+<script>
+        $("td.month").each(function() {
+                $this = $(this);
+                fade = 255 - ($this.html()*1);
+                $this.css("background", "rgb(255,"+fade+","+fade+")");
+        });
+
+        $("td.sum").each(function() {
+                $this = $(this);
+                fade = 255 - ($this.html()/7);
+                $this.css("background", "rgb(255,"+fade+","+fade+")");
+        });
+
+        /*
+        $("td.oupr").each(function() {
+                $this = $(this);
+                fade = 255 - (($this.html().replace(",",'')-27000)/50);
+                $this.css("background", "rgb(255,"+fade+","+fade+")");
+        });
+
+        $("td.avg").each(function() {
+                $this = $(this);
+                fade = 255 - ($this.html()*50);
+                $this.css("background", "rgb(255,"+fade+","+fade+")");
+        });
+        */
 </script>
+<style>
+
+
+        div.frame {
+                width: 100%;
+                height: fit-content;
+                overflow: hidden;
+        }
+
+        table#unlawfuldetainers .oupr,
+        table#unlawfuldetainers .avg {
+                display: none;
+        }
+
+        table#unlawfuldetainers {
+                text-align: center;
+                margin: 15px auto;
+                border: 1px solid #DDD;
+        }
+
+        table#unlawfuldetainers td, table#unlawfuldetainers th {
+                padding: 5px 7px;
+        }
+
+        table#unlawfuldetainers td.month {
+                border-top: 1px inset white;
+                border-right: 1px outset white;
+        }
+
+        table#unlawfuldetainers .year {
+                border-right: 1px inset black;
+        }
+
+        table#unlawfuldetainers .oupr,
+        table#unlawfuldetainers .avg,
+        table#unlawfuldetainers .sum {
+                border-top: 1px inset white;
+                border-left: 2px solid black;
+        }
+
+        table#unlawfuldetainers th {
+                border-bottom: 1px inset black;
+        }
+
+
+        @media only screen and (max-width: 768px) {
+
+                div.frame {
+                        overflow: scroll;
+                }
+        }
+</style>
 </div>
   </body>
 </html>
