--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <title>Margaux Maxwell: Lede Project 1</title>
   </head>
   <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+    <p>The housing market is tight across the Yakima Valley. Evictions, which halted during the early pandemic, have risen again as programs put in place to keep people housed during the pandemic fall away one by one.</p>
 
 <div class="frame">
 <table id="unlawfuldetainers">
 <tr style="border-bottom: 1px solid black; font-size:1.2em;">
-<th colspan="99" style="text-align:left;">Evictions filed in Yakima County</th>
+<th colspan="99" style="text-align:left;">Evictions filed in Yakima County pre and post-pandemic</th>
 </tr>
 <tr>
 <th class="year">Year</th>
