--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 <td class="avg"></td>
 </tr>
 <tr style="border-top: 1px solid black; color: grey;">
-<td colspan="99" style="color: grey; text-align: left;">Chart: Yakima Herald-Republic • Source: Seattle Times and Yakima County (2023)</td>
+<td colspan="99" style="color: grey; text-align: left;">Source: Seattle Times and Yakima County (2023)</td>
 </tr>
 <tr style="border-top: 1px solid black; color: grey; display: none;">
 <td colspan="99" style="color: grey;">* OUPR: Occupied units paying rent</td>
