--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Margaux Maxwell: Lede Project 1</title>
+    <title>Test test test</title>
   </head>
   <body>
     <p>The housing market is tight across the Yakima Valley. Evictions, which halted during the early pandemic, have risen again as programs put in place to keep people housed during the pandemic fall away one by one.</p>
@@ -174,7 +174,7 @@
 <td class="avg"></td>
 </tr>
 <tr style="border-top: 1px solid black; color: grey;">
-<td colspan="99" style="color: grey; text-align: left;">Source: Seattle Times and Yakima County (2023)</td>
+<td colspan="99" style="color: grey; text-align: left;">Source: Washington Administrative Office of the Courts (2023)</td>
 </tr>
 <tr style="border-top: 1px solid black; color: grey; display: none;">
 <td colspan="99" style="color: grey;">* OUPR: Occupied units paying rent</td>
