--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 
   </head>
   <body>
-    <p>The housing market is tight across the Yakima Valley. Evictions, which halted during the early pandemic, have risen again as programs put in place to keep people housed during the pandemic fall away one by one.</p>
-<div class="frame">
+    <div>
+    <p>style="text-align:center"The housing market is tight across the Yakima Valley. Evictions, which halted during the early pandemic, have risen again as programs put in place to keep people housed during the pandemic fall away one by one.</p>
+</div>
+      <div class="frame">
 <table id="unlawfuldetainers">
 <tr style="border-bottom: 1px solid black; font-size:1.2em;">
 <th colspan="99" style="text-align:left;">Evictions filed in Yakima County pre and post-pandemic</th>
