--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   </head>
   <body>
 <div id="parent">
-    <h1 style="text-align:center; font-weight: bold; font-size: 20px">The housing market is tight across the Yakima Valley. Evictions, which halted during the early pandemic, have risen again as programs put in place to keep people housed during the pandemic fall away one by one.</h1>
+    <h1 style="text-align:center; font-weight: bold; font-size: 20px">Out of time</h1>
+</div>
+    <div id="first child">
+    <h2 style="text-align:center; font-weight: bold; font-size: 16px">The housing market is tight across the Yakima Valley. Evictions, which halted during the early pandemic, have risen again as programs put in place to keep people housed during the pandemic fall away one by one.</h2>
 </div>
       <div class="frame">
 <table id="unlawfuldetainers">
@@ -213,6 +216,12 @@
 </script>
 <style>
   #parent {
+max-width: 500px;
+margin: auto; 
+  }
+table {
+
+  #first child {
 max-width: 500px;
 margin: auto; 
   }
