--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1 style="text-align:center; font-weight: bold">Out of time</h1>
 </div>
     <div id="firstchild">
-    <h2 style="text-align:center">The housing market is tight across the Yakima Valley. Evictions, which halted during the early pandemic, have risen again as programs put in place to keep people housed during the pandemic fall away one by one.</h2>
+    <h2 style="text-align:center; font-weight: normal">The housing market is tight across the Yakima Valley. Evictions, which halted during the early pandemic, have risen again as programs put in place to keep people housed during the pandemic fall away one by one.</h2>
 </div>
       <div class="frame">
 <table id="unlawfuldetainers">
