--- a/index.html
+++ b/index.html
@@ -1,35 +1,55 @@
 <!doctype html>
 <html>
-  <head>
+<head>
     <title>Test test test</title>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
 
-  </head>
-  <body>
-<div id="parent">
-    <h1 style="text-align:center; font-weight: bold; font-family:georgia">Out of time</h1>
-</div>
-    <div id="firstchild">
-    <h2 style="text-align:center; font-weight: normal; font-family:georgia; font-size: 20px; text-align: justify">The housing market is tight across the Yakima Valley. Evictions, which halted during the early pandemic, have risen again as programs put in place to keep people housed during the pandemic fall away one by one.</h2>
-</div>
-    <div id="burdeniframe">
-<iframe title="How many households in Yakima County are considered rent burdened?" aria-label="Stacked Bars" id="datawrapper-chart-nIoqe" src="https://datawrapper.dwcdn.net/nIoqe/3/" scrolling="no" frameborder="0" style="width: 100%; max-width: 600px; margin: auto; width: fit-content; !important; border: none;" height="262" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();</script>
-</div>
-      <style>
-  #parent {
-max-width: 500px;
-margin: auto; 
-  }
-  #firstchild {
-max-width: 550px;
-margin: auto; 
-    #burdeniframe
-    display: block;
+    <style>
 
-  }
+    #parent {
+        max-width: 500px;
+        margin: auto; 
+    }
+    #firstchild {
+        max-width: 550px;
+        margin: auto; 
+    }
 
-</style>
-    
+    #burdendataviz {
+        width: fit-content; 
+    }
+
+    iframe {
+        width: 100%; 
+        max-width: 550px; 
+        margin: auto; 
+        border: none; 
+        display: block;
+    }
+
+    h1 {
+        text-align: center; 
+        font-weight: bold; 
+        font-family: georgia;
+    }
+
+  </style>
+</head>
+<body>
+    <div id="parent">
+        <h1>Out of time</h1>
     </div>
-  </body>
+    <div id="firstchild">
+        <h2 style="text-align:center; font-weight: normal; font-family:georgia; font-size: 20px; text-align: justify">The housing market is tight across the Yakima Valley. Evictions, which halted during the early pandemic, have risen again as programs put in place to keep people housed during the pandemic fall away one by one.</h2>
+    </div>
+    <div id="burdendataviz">
+
+        <iframe title="How many households in Yakima County are considered rent burdened?" aria-label="Stacked Bars" id="datawrapper-chart-nIoqe" src="https://datawrapper.dwcdn.net/nIoqe/3/" scrolling="no" frameborder="0" style="" height="262" data-external="1">
+        </iframe>
+        <script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
+        </script>
+    </div>
+
+  </div>
+</body>
 </html>
