--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
     #burdendataviz {
         width: 100%; 
     }
-
+        
+    #costdataviz {
+        width: 100%; 
+    }
+        
     iframe {
         width: 100%; 
         max-width: 550px; 
@@ -49,7 +53,11 @@
         <script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
         </script>
     </div>
+<div id="costdataviz">
 
+      <iframe title="Number of renter occupied units in Yakima County versus their cost " aria-label="Stacked Bars" id="datawrapper-chart-KMi5K" src="https://datawrapper.dwcdn.net/KMi5K/4/" scrolling="no" frameborder="0" height="276" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
+</script>
+    </div>
   </div>
 </body>
 </html>
