--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div id="parent">
         <h1>Out of time</h1>
     </div>
-    <div id="intotext">
+    <div id="introtext">
         <h2 style="text-align:center; font-weight: normal; font-family:georgia; font-size: 20px; text-align: justify">The housing market is tight across the Yakima Valley. Evictions, which halted during the early pandemic, have risen again as programs put in place to keep people housed during the pandemic fall away one by one.</h2>
     </div>
     <div id="burdendataviz">
