--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Test test test</title>
+    <title>Out of time</title>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
 
     <style>
@@ -49,7 +49,7 @@
         <h1>Out of time</h1>
     </div>
     <div id="introtext">
-        <h2 style="text-align:center; font-weight: normal; font-family:georgia; font-size: 20px; text-align: justify">The housing market is tight across the Yakima Valley. Evictions, which halted during the early pandemic, have risen again as programs put in place to keep people housed during the pandemic fall away one by one.</h2>
+        <h2 style="text-align:center; font-weight: normal; font-family:georgia; font-size: 20px; text-align: justify">The housing market is tight across Yakima County. The number of rent-burdened tenants in the valley, or people who spend more than 30% of their income on rent, has continued to inch ahead. Data from the U.S. Census shows that between 2016-2021 over 45% of renters were considered rent burdened. The problem is likely to worsen as programs put in place to keep people housed during the pandemic fall away one by one.</h2>
     </div>
     <div id="burdendataviz">
 
