--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <h1>Out of time</h1>
     </div>
     <div id="introtext">
-        <h2 style="text-align:center; font-weight: normal; font-family:georgia; font-size: 20px; text-align: justify">The housing market is tight across Yakima County. The number of rent-burdened tenants in the valley, or people who spend more than 30% of their income on rent, has continued to inch ahead. Data from the U.S. Census shows that just under half of Yakima's renters were considered rent burdened around the time of the pandemic. The problem is likely to worsen as programs put in place to keep people housed during the pandemic fall away one by one.</h2>
+        <h2 style="text-align:center; font-weight: normal; font-family:georgia; font-size: 20px; text-align: justify">The housing market is tight across Yakima County. The number of rent-burdened tenants in the valley, or people who spend more than 30% of their income on rent, has continued to inch ahead. <br> Data from the U.S. Census shows that just under half of Yakima's renters were considered rent burdened around the time of the pandemic. The problem is likely to worsen as programs put in place to keep people housed during the global crisis fall away one by one.</h2>
     </div>
     <div id="burdendataviz">
 
