--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </script>
     </div>
        <div id="bodytext">
-        <h2 style="text-align:center; font-weight: normal; font-family:georgia; font-size: 20px; text-align: justify">At the same time, it’s getting harder to find affordable housing in Yakima County. New construction has targeted higher-income tenants, often with rents between $1,500 and $2,000. That doesn’t help the housing market for low-income residents in a county where an estimated <a href="https://www.census.gov/quickfacts/fact/table/yakimacountywashington/INC110221">14.7% live in poverty. </a> .</h2>
+        <h2 style="text-align:center; font-weight: normal; font-family:georgia; font-size: 20px; text-align: justify">At the same time, it’s getting harder to find affordable housing in Yakima County. New construction has targeted higher-income tenants, often with rents between $1,500 and $2,000. That doesn’t help the housing market for low-income residents in a county where an estimated <a href="https://www.census.gov/quickfacts/fact/table/yakimacountywashington/INC110221">14.7% live in poverty</a> .</h2>
     </div>
 <div id="costdataviz">
 
