--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     #costdataviz {
         width: 100%; 
     }
+      #endtext {
+        max-width: 550px;
+        margin: auto; 
+    }
         
     iframe {
         width: 100%; 
@@ -49,22 +53,25 @@
         <h1>Out of time</h1>
     </div>
     <div id="introtext">
-        <h2 style="text-align:center; font-weight: normal; font-family:georgia; font-size: 20px; text-align: justify">The housing market is tight across Yakima County. The number of rent-burdened tenants in the valley, or people who spend more than 30% of their income on rent, has continued to inch forward. <br><br> Data from the U.S. Census shows that just under half of Yakima's renters were considered rent burdened around the time of the pandemic. The problem is likely to worsen as programs put in place to keep people housed during the global crisis fall away one by one.</h2>
+        <h2 style="text-align:center; font-weight: normal; font-family:georgia; font-size: 20px; text-align: justify">The housing market is tight across Yakima County. New construction has targeted higher-income tenants, often with rents between $1,500 and $2,000. That doesn’t help the housing market for low-income residents in a county where an estimated <a href="https://www.census.gov/quickfacts/fact/table/yakimacountywashington/INC110221">14.7% live in poverty</a> .
+</h2>
     </div>
-    <div id="burdendataviz">
+    <div id="costdataviz">
+
+      <iframe title="Number of renter occupied units in Yakima County versus their cost " aria-label="Stacked Bars" id="datawrapper-chart-KMi5K" src="https://datawrapper.dwcdn.net/KMi5K/4/" scrolling="no" frameborder="0" height="276" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
+</script>
+    </div>
+       </div>
+ 
+       <div id="bodytext">
+        <h2 style="text-align:center; font-weight: normal; font-family:georgia; font-size: 20px; text-align: justify">As affordable housing becomes more scarce, Yakima area renters and feeling the pressure. The number of rent-burdened tenants in the valley, or people who spend more than 30% of their income on rent, has continued to inch forward. Data from the U.S. Census shows that just under half of Yakima's renters were considered rent burdened through the pandemic. The problem is likely to worsen as programs put in place to keep people housed during the pandemic fall away one by one.</h2>
+    </div>
+   <div id="burdendataviz">
 
         <iframe title="How many households in Yakima County are considered rent burdened?" aria-label="Stacked Bars" id="datawrapper-chart-nIoqe" src="https://datawrapper.dwcdn.net/nIoqe/3/" scrolling="no" frameborder="0" style="" height="262" data-external="1">
         </iframe>
         <script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
         </script>
-    </div>
-       <div id="bodytext">
-        <h2 style="text-align:center; font-weight: normal; font-family:georgia; font-size: 20px; text-align: justify">At the same time, it’s getting harder to find affordable housing in Yakima County. New construction has targeted higher-income tenants, often with rents between $1,500 and $2,000. That doesn’t help the housing market for low-income residents in a county where an estimated <a href="https://www.census.gov/quickfacts/fact/table/yakimacountywashington/INC110221">14.7% live in poverty</a> .</h2>
-    </div>
-<div id="costdataviz">
-
-      <iframe title="Number of renter occupied units in Yakima County versus their cost " aria-label="Stacked Bars" id="datawrapper-chart-KMi5K" src="https://datawrapper.dwcdn.net/KMi5K/4/" scrolling="no" frameborder="0" height="276" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
-</script>
     </div>
   </div>
 </body>
