--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
         <script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
         </script>
     </div>
+     <div id="endtext">
+        <h2 style="text-align:center; font-weight: normal; font-family:georgia; font-size: 20px; text-align: justify">The Bureau of Labor and Statistics described the cost of shelter as <a href="https://www.bls.gov/news.release/cpi.htm">the largest contributor to cost increases during the last year</a>. Yakima County’s COVID-19 rental assistance program, a key part of the puzzle for many tenants, expired in April. For those looking for an affordable place to live, options are limited in a housing market with fewer and more expensive options.</h2>
+    </div>
   </div>
 </body>
 </html>
