--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
        </div>
  
        <div id="bodytext">
-        <h2 style="text-align:center; font-weight: normal; font-family:georgia; font-size: 20px; text-align: justify">As affordable housing becomes more scarce, Yakima area renters and feeling the pressure. The number of rent-burdened tenants in the valley, or people who spend more than 30% of their income on rent, has continued to inch forward. Data from the U.S. Census shows that just under half of Yakima's renters were considered rent burdened through the pandemic. The problem is likely to worsen as programs put in place to keep people housed during the pandemic fall away one by one.</h2>
+        <h2 style="text-align:center; font-weight: normal; font-family:georgia; font-size: 20px; text-align: justify">As affordable housing becomes more scarce, Yakima area renters and feeling the pressure. The number of rent-burdened tenants in the valley, or people who spend more than 30% of their income on rent, has continued to inch forward. <br><br> Data from the U.S. Census shows that just under half of Yakima's renters were considered rent burdened through the pandemic. The problem is likely to worsen as programs put in place to keep people housed during the pandemic fall away one by one.</h2>
     </div>
    <div id="burdendataviz">
 
