--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </script>
     </div>
      <div id="endtext">
-        <h2 style="text-align:center; font-weight: normal; font-family:georgia; font-size: 20px; text-align: justify">The Bureau of Labor and Statistics described the cost of shelter as <a href="https://www.bls.gov/news.release/cpi.htm">the largest contributor to cost increases during the last year</a>. Yakima County’s COVID-19 rental assistance program, a key part of the puzzle for many tenants, expired in April. For those looking for an affordable place to live, options are limited in a housing market with fewer and more expensive options.</h2>
+        <h2 style="text-align:center; font-weight: normal; font-family:georgia; font-size: 20px; text-align: justify">The Bureau of Labor and Statistics described the cost of <a href="https://www.bls.gov/news.release/cpi.htm">shelter as the largest contributor to cost increases</a> during the last year. Yakima County’s COVID-19 rental assistance program, a key part of the puzzle for many tenants, expired in April. For those looking for an affordable place to live, options are limited in a housing market with fewer and more expensive options.</h2>
     </div>
   </div>
 </body>
