--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h1>Out of time</h1>
     </div>
     <div id="introtext">
-        <h2 style="text-align:center; font-weight: normal; font-family:georgia; font-size: 20px; text-align: justify">The housing market is tight across Yakima County. New construction has targeted higher-income tenants, often with rents between $1,500 and $2,000. That doesn’t help the housing market for low-income residents in a county where an estimated <a href="https://www.census.gov/quickfacts/fact/table/yakimacountywashington/INC110221">14.7% live in poverty</a> .
+        <h2 style="text-align:center; font-weight: normal; font-family:georgia; font-size: 20px; text-align: justify">The housing market is tight across the Yakima Valley. New construction has targeted higher-income tenants, often with rents between $1,500 and $2,000. That doesn’t help the housing market for low-income residents in a county where an estimated <a href="https://www.census.gov/quickfacts/fact/table/yakimacountywashington/INC110221">14.7% live in poverty</a> .
 </h2>
     </div>
     <div id="costdataviz">
@@ -64,7 +64,7 @@
        </div>
  
        <div id="bodytext">
-        <h2 style="text-align:center; font-weight: normal; font-family:georgia; font-size: 20px; text-align: justify">As affordable housing becomes more scarce, Yakima area renters and feeling the pressure. The number of rent-burdened tenants in the valley, or people who spend more than 30% of their income on rent, has continued to inch forward. <br><br> Data from the U.S. Census shows that just under half of Yakima's renters were considered rent burdened through the pandemic. The problem is likely to worsen as programs put in place to keep people housed during the pandemic fall away one by one.</h2>
+        <h2 style="text-align:center; font-weight: normal; font-family:georgia; font-size: 20px; text-align: justify">As affordable housing becomes more scarce, Yakima area renters are feeling the pressure. The number of rent-burdened tenants in the valley, or people who spend more than 30% of their income on rent, has continued to inch forward. <br><br> Data from the U.S. Census shows that just under half of Yakima's renters were considered rent burdened through the pandemic. The problem is likely to worsen as programs put in place to keep people housed during the pandemic fall away one by one.</h2>
     </div>
    <div id="burdendataviz">
 
@@ -74,7 +74,7 @@
         </script>
     </div>
      <div id="endtext">
-        <h2 style="text-align:center; font-weight: normal; font-family:georgia; font-size: 20px; text-align: justify">The Bureau of Labor and Statistics described the cost of <a href="https://www.bls.gov/news.release/cpi.htm">shelter as the largest contributor to cost increases</a> during the last year. Yakima County’s COVID-19 rental assistance program, a key part of the puzzle for many tenants, expired in April. For those looking for an affordable place to live, options are limited in a housing market with fewer and more expensive options.</h2>
+        <h2 style="text-align:center; font-weight: normal; font-family:georgia; font-size: 20px; text-align: justify">For those looking for an affordable place to live, options are limited. The Bureau of Labor and Statistics described the cost of <a href="https://www.bls.gov/news.release/cpi.htm">shelter as the largest contributor to cost increases</a> during the last year. Yakima County’s COVID-19 rental assistance program, a key part of the puzzle for many tenants, expired in April. </h2>
     </div>
   </div>
 </body>
