--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
         max-width: 500px;
         margin: auto; 
     }
+    #image{
+        width: 100%; 
+        max-width: 550px; 
+        margin: auto; 
+        border: none; 
+        display: block;
+    }
     #introtext {
         max-width: 550px;
         margin: auto; 
@@ -52,6 +59,9 @@
     <div id="parent">
         <h1>Out of time</h1>
     </div>
+    <div id="image">
+    <img src="HousingYak.jpg" alt="Powerhouse Flats, a new apartment complex under construction along Powerhouse Road near Fred Meyer, is pictured on Wednesday, March 8, 2023, in Yakima, Wash.">
+   </div>
     <div id="introtext">
         <h2 style="text-align:center; font-weight: normal; font-family:georgia; font-size: 20px; text-align: justify">The housing market is tight across the Yakima Valley. New construction has targeted higher-income tenants, often with rents between $1,500 and $2,000. That doesn’t help the housing market for low-income residents in a county where an estimated <a href="https://www.census.gov/quickfacts/fact/table/yakimacountywashington/INC110221">14.7% live in poverty</a> .
 </h2>
