--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
     <div id="image">
     <img src="HousingYak.jpg" alt="Powerhouse Flats, a new apartment complex under construction along Powerhouse Road near Fred Meyer, is pictured on Wednesday, March 8, 2023, in Yakima, Wash." width="550" height="300">
-    <figcaption>Powerhouse Flats, a new apartment complex under construction along Powerhouse Road near Fred Meyer, is pictured on Wednesday, March 8, 2023, in Yakima, Wash.</figcaption>
+    <figcaption><i>Powerhouse Flats, a new apartment complex under construction along Powerhouse Road near Fred Meyer, is pictured on Wednesday, March 8, 2023, in Yakima, Wash.</i></figcaption>
     </div>
     <div id="introtext">
         <h2 style="text-align:center; font-weight: normal; font-family:georgia; font-size: 20px; text-align: justify">The housing market is tight across the Yakima Valley. New construction has targeted higher-income tenants, often with rents between $1,500 and $2,000. That doesn’t help the housing market for low-income residents in a county where an estimated <a href="https://www.census.gov/quickfacts/fact/table/yakimacountywashington/INC110221">14.7% live in poverty</a> .
