--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         margin: auto; 
         border: none; 
         display: block;
+        color: #808080; 
     }
     #introtext {
         max-width: 550px;
