--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         border: none; 
         display: block;
         color: #808080; 
+        font-family; arial;
     }
     #introtext {
         max-width: 550px;
